Finished with task 4 including creating two tests in the BurgerBuilderTest